--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 install: 
   - sudo apt-get update
   - sudo apt-get install portaudio19-dev xvfb mplayer lame git
-  - pip install PyQt5 sip pytest
+  - pip install PyQt5==5.9 sip pytest
   - start-stop-daemon --start --pidfile ~/xvfb.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -screen 0 1024x768x24 -ac +extension GLX +render -noreset
   - export DISPLAY=:99
 
